@@ -1,5 +1,5 @@
 /**
- *    Copyright 2009-2015 the original author or authors.
+ *    Copyright 2009-2021 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -32,8 +32,17 @@ import org.apache.ibatis.type.TypeHandlerRegistry;
  * @author Clinton Begin
  */
 public abstract class BaseBuilder {
+  /**
+   * mybatis的全局配置文件
+   */
   protected final Configuration configuration;
+  /**
+   * 用于保存我们的Entity的别名
+   */
   protected final TypeAliasRegistry typeAliasRegistry;
+  /**
+   * 用户保存我们java类型和jdbc数据库类型的
+   */
   protected final TypeHandlerRegistry typeHandlerRegistry;
 
   public BaseBuilder(Configuration configuration) {
@@ -59,8 +68,8 @@ public abstract class BaseBuilder {
   }
 
   protected Set<String> stringSetValueOf(String value, String defaultValue) {
-    value = (value == null ? defaultValue : value);
-    return new HashSet<String>(Arrays.asList(value.split(",")));
+    value = value == null ? defaultValue : value;
+    return new HashSet<>(Arrays.asList(value.split(",")));
   }
 
   protected JdbcType resolveJdbcType(String alias) {
@@ -102,17 +111,28 @@ public abstract class BaseBuilder {
       return null;
     }
     try {
-      return resolveClass(alias).newInstance();
+      return resolveClass(alias).getDeclaredConstructor().newInstance();
     } catch (Exception e) {
       throw new BuilderException("Error creating instance. Cause: " + e, e);
     }
   }
 
-  protected Class<?> resolveClass(String alias) {
+  /**
+   * 方法实现说明:根据别名字符串解析出对应的class类型
+   * @author:xsls
+   * @param alias:别名字符串
+   * @return: 返回别名对应的class属性
+   * @exception:
+   * @date:2019/9/6 13:58
+   */
+  protected <T> Class<? extends T> resolveClass(String alias) {
     if (alias == null) {
       return null;
     }
     try {
+      /**
+       * 真正的解析我们的别名
+       */
       return resolveAlias(alias);
     } catch (Exception e) {
       throw new BuilderException("Error resolving class. Cause: " + e, e);
@@ -127,7 +147,7 @@ public abstract class BaseBuilder {
     if (type != null && !TypeHandler.class.isAssignableFrom(type)) {
       throw new BuilderException("Type " + type.getName() + " is not a valid TypeHandler because it does not implement TypeHandler interface");
     }
-    @SuppressWarnings( "unchecked" ) // already verified it is a TypeHandler
+    @SuppressWarnings("unchecked") // already verified it is a TypeHandler
     Class<? extends TypeHandler<?>> typeHandlerType = (Class<? extends TypeHandler<?>>) type;
     return resolveTypeHandler(javaType, typeHandlerType);
   }
@@ -145,7 +165,18 @@ public abstract class BaseBuilder {
     return handler;
   }
 
-  protected Class<?> resolveAlias(String alias) {
+  /**
+   * 方法实现说明:真正的解析别名
+   * @author:xsls
+   * @param alias:别名字符串对象
+   * @return: 别名对应的class属性
+   * @exception:
+   * @date:2019/9/6 13:59
+   */
+  protected <T> Class<? extends T> resolveAlias(String alias) {
+    /**
+     * 从别名映射器对象中解析别名
+     */
     return typeAliasRegistry.resolveAlias(alias);
   }
 }
